Update mvnTest.groovy